--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "firebase": "^9.6.10",
     "vue": "^2.6.14",
+    "vue-material-design-icons": "^5.0.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
